# atlas-dynamic-ui

./: .env.example  .gitignore  PLAN.md  README.md  docker-compose.yml  langgraph.json  pyproject.toml
agent-chat-ui/: .env.local.example  package-lock.json
agent-chat-ui/src/app/: globals.css  layout.tsx  page.tsx
agent-chat-ui/src/app/api/transcribe/: route.ts
agent-chat-ui/src/app/dashboard/: page.tsx
agent-chat-ui/src/components/dashboard/: ChartTooltip.tsx  ClaimsByStatusChart.tsx  ClaimsByTypeChart.tsx  ClaimsTrendChart.tsx  DashboardShell.tsx  FraudDistributionChart.tsx  KPICards.tsx  ProcessingTimeChart.tsx  RecentClaimsTable.tsx
agent-chat-ui/src/components/icons/: langgraph.tsx
agent-chat-ui/src/components/thread/: index.tsx  markdown-text.tsx  quick-action-form.tsx
agent-chat-ui/src/components/thread/history/: index.tsx
agent-chat-ui/src/components/thread/messages/: human.tsx  tool-calls.tsx
agent-chat-ui/src/components/views/: ClaimsView.tsx  CoverageUpgradeView.tsx  DamageAssessmentView.tsx  DashboardView.tsx  HomeView.tsx  PolicyQAView.tsx  ViewRouter.tsx
agent-chat-ui/src/components/views/shared/: ChatInput.tsx  ChatPanel.tsx  ClaimMetadata.tsx  ClaimStepper.tsx  TopBar.tsx  (+1 more)
agent-chat-ui/src/hooks/: use-active-view.ts  use-claim-state.ts  use-dashboard.ts  use-policy-dashboard.ts  use-voice-recorder.ts
agent-chat-ui/src/lib/: dashboard-api.ts
atlas_v2/: __init__.py  graph.py  tools.py
backend/: .env.example  requirements.txt  seed.py  seed_dashboard.py
backend/app/: config.py  database.py  main.py  models.py  schemas.py
