[project]
name = "insurance-agent"
version = "0.1.0"
description = "Auto Claims Triage Agent — proof of concept"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "langsmith>=0.1.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "faiss-cpu>=1.7.0",
    "langchain-community>=0.3.0",
    "fpdf2>=2.7.0",
    "resend>=2.0.0",
    "langgraph-cli[inmem]>=0.1.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["atlas_v2*"]
